--- a/LogicalProgrammingPractiseProblems/LogicalProgrammingPractiseProblems.csproj
+++ b/LogicalProgrammingPractiseProblems/LogicalProgrammingPractiseProblems.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryConversion.cs" />
     <Compile Include="FibanocciSeries.cs" />
+    <Compile Include="NewtonSqrtMethod.cs" />
     <Compile Include="PerfectNumber.cs" />
     <Compile Include="PrimeNumber.cs" />
     <Compile Include="Program.cs" />
