--- a/LogicalProgrammingPractiseProblems/LogicalProgrammingPractiseProblems.csproj
+++ b/LogicalProgrammingPractiseProblems/LogicalProgrammingPractiseProblems.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ReverseNumber.cs" />
     <Compile Include="StopWatch.cs" />
     <Compile Include="TemperatureConversion.cs" />
+    <Compile Include="VendingMachine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
